Added list view of all guitars and placed edit / delete functionality. Also fixed bug with missing div affecting footer on guitar-details.html

--- a/guitars/templates/guitars/guitar_detail.html
+++ b/guitars/templates/guitars/guitar_detail.html
@@ -135,6 +135,7 @@
                                             <i class="gold-txt fas fa-quote-right align-self-end" data-fa-transform="up-5"></i>
                                         </div>
                                     </div>
+                                </div>
                             </div>
                         </div>
                                 
@@ -169,8 +170,7 @@
                                 </div> 
                             </div>        
                         </div> <!--close Additional Specs -->
-                    </div> <!--close Guitar Details -->
-                        
+                    </div> <!--close Guitar Details -->    
                 </div>  <!--close sub-parent row-->
             </div>      <!--close parent col-->
         </div>          <!--close parent row-->
