--- a/site_admin/templates/site_admin/site_admin.html
+++ b/site_admin/templates/site_admin/site_admin.html
@@ -26,25 +26,13 @@
                     </div>
 
                     <div class="col-8">
-                            <a href="" class="btn btn-md btn-gold-outline mb-4">Edit Guitars</a>
-                            <a href="{% url 'add_guitar' %}" class="btn btn-md btn-gold-outline mb-4">Add Guitar</a>
+                            <a href="{% url 'guitarlist' %}" class="btn btn-md btn-gold-outline mb-4">Update / Delete Existing Guitar</a>
+                            <a href="{% url 'add_guitar' %}" class="btn btn-md btn-gold-outline mb-4">Add New Guitar</a>
                     </div>
                     <hr class="mb-0">
                 </div>
                 
-                <!--Manage Categories-->
-                <div class="row mt-4 d-flex align-items-center">
-                    <div class="col-4">
-                        <h4>Manage Categories</h4>
-                    </div>
-
-                    <div class="col-8">
-                            <a href="" class="btn btn-md btn-gold-outline mb-4">Edit Category</a>
-                            <a href="" class="btn btn-md btn-gold-outline mb-4">Add Category</a>
-                    </div>
-                    <hr class="mb-0">
-                </div>
-
+                
                 <!--Manage Subscriptions-->
                 <div class="row mt-4 d-flex align-items-center">
                     <div class="col-4">
