--- a/static/css/base.css
+++ b/static/css/base.css
@@ -627,7 +627,16 @@ select option[value=""] {
     overflow: hidden;
 }
 
+/*-- SiteAdmin --*/
 
+.list-image {
+    height: 5vh;
+    max-width:100%;
+    display: block;
+    -o-object-fit: cover;
+       object-fit: cover;
+    overflow: hidden;
+}
 
 /*--Allauth forms ---------*/
 
