Minor styling adjustments and changed redirect for admin cancel back to prior admin page

--- a/site_admin/templates/site_admin/edit_guitar.html
+++ b/site_admin/templates/site_admin/edit_guitar.html
@@ -33,7 +33,7 @@
                             {% csrf_token%}
                             {% crispy form %}
                             <div>
-                                <a href="{% url 'site_admin' %}" class="btn btn-md btn-outline-danger mb-4">Cancel</a>
+                                <a href="{% url 'guitarlist' %}" class="btn btn-md btn-outline-danger mb-4">Cancel</a>
                                 <button type="submit" class="btn btn-md btn-outline-success mb-4">Update Guitar</button>
                             </div>
                         </form>
