--- a/templates/base.html
+++ b/templates/base.html
@@ -177,9 +177,17 @@
     {% if messages %}
       <div class="message-container text-center">
         {% for message in messages %}
-        
-          {% include 'includes/toasts/toast_success.html' %}
-          
+          {% with message.level as level %}
+            {% if level == 40 %}
+                {% include 'includes/toasts/toast_error.html' %}
+            {% elif level == 30 %}
+                {% include 'includes/toasts/toast_warning.html' %}
+            {% elif level == 25 %}
+                {% include 'includes/toasts/toast_success.html' %}
+            {% else %}
+                {% include 'includes/toasts/toast_info.html' %}
+            {% endif %}
+          {% endwith %}
         {% endfor %}
       </div>
     {% endif %}
@@ -364,7 +372,7 @@
 
     {% block postloadjs %}
       <script type="text/javascript">
-        $('.toast').toast('show');
+          $('.toast').toast('show');
       </script>
     {% endblock %}
    
