--- a/static/css/base.css
+++ b/static/css/base.css
@@ -52,7 +52,7 @@ body {
 
 .message-container {
     position: fixed;
-    top:72px;
+    top:10vh;
     right:  15px;
     z-index: 99999999999;
 }
