--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,11 +1,11 @@
 <div class="toast custom-toast" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="arrow-up arrow-success"></div>
-    <div class="w-100 toast-capper bg-sucess"></div>
+    <div class="arrow-up arrow-info"></div>
+    <div class="w-100 toast-capper bg-info"></div>
     <div class="toast-header bg-white text-dark">
-      <strong class="me-auto">Success!</strong>
+      <strong class="me-auto">Alert!</strong>
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
-    <div class="toast-body">
+    <div class="toast-body bg-white">
       {{ message }}
     </div>
 </div>
