Remove bootstrap h100 class

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
+    <div class="container">
         <div class="row">
             <div class="col mt-2">
                 <h1 class="gold-special-txt text-center mb-3">Shopping Bag</h1>
