--- a/guitars/templates/guitars/guitar_detail.html
+++ b/guitars/templates/guitars/guitar_detail.html
@@ -12,13 +12,13 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
+    <div class="container">
         <div class="row">
             <div class="col text-center logo-txt gold-special-txt display-4 mb-4">
                 {{ guitar.brand }} - {{ guitar.guitar_model }}
             </div>
         </div>
-        <div class="row h-100">
+        <div class="row">
             <div class="col-12 main-content-col">
                 <div class="row">
 
