--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
+    <div class="container">
         <div class="col-12">
             <!--Welcome banner and links to subscription plans and Guitar Vault-->
 
