--- a/members/templates/members/profile.html
+++ b/members/templates/members/profile.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
+    <div class="container">
         <div class="row">
             <div class="col mt-2">
                 <h1 class="gold-special-txt text-center mb-3">Member Profile</h1>
