--- a/site_admin/templates/site_admin/add_guitar.html
+++ b/site_admin/templates/site_admin/add_guitar.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
+    <div class="container">
         <div class="col-12">
             <div class="row">
                 <h1 class="gold-special-txt my-4 text-center">Site Administration</h1>
