--- a/site_admin/templates/site_admin/list_orders.html
+++ b/site_admin/templates/site_admin/list_orders.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container-lg h-100">
+    <div class="container-lg">
         {% if request.user.is_superuser %}
             <div class="col-12">
                 <div class="row">
