--- a/subscriptions/templates/subscriptions/subscriptions.html
+++ b/subscriptions/templates/subscriptions/subscriptions.html
@@ -12,14 +12,14 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
+    <div class="container">
         <div class="row">
             <div class="col text-center logo-txt gold-special-txt display-4 mt-5 mb-5">
                 Subscriptions
             </div>
         </div>
 
-        <div class="row h-100">
+        <div class="row">
             <div class="col-12 main-content-col my-auto">
                 <!--Summary-->
                 <div class="row">
