--- a/templates/base.html
+++ b/templates/base.html
@@ -199,9 +199,9 @@
     {% endblock %}
 
     {% block footer %}
-      <div id="footer" class="container-fluid mt-5">
+      <footer class="container-fluid mt-5">
         <div class="container-lg">
-          <footer class="py-3">
+          <div class="py-3">
             <div class="row">
 
               <!-- Copyright -->
@@ -224,9 +224,9 @@
               </div>
 
             </div>
-          </footer>
+          </div>
         </div>
-      </div>
+      </footer>
     {% endblock %}
 
     {% block modals %}
