--- a/site_admin/templates/site_admin/accounts.html
+++ b/site_admin/templates/site_admin/accounts.html
@@ -48,7 +48,7 @@
                                     <td>{{ account.order.date }}</td>
                                     <td>{{ account.active|yesno:"Active,Cancelled" }}</td>
                                     <td>{{ account.canx_date|default_if_none:"-" }}</td>
-                                    <td>{{ plec_total }}</td>
+                                    <td>{{ account.plectrum_balance }}</td>
                                     <td>
                                         <a href="{% url 'canx_account' account.id %}" class="btn btn-sm btn-outline-danger">Cancel</a>
                                     </td>
@@ -59,11 +59,42 @@
                             </table>
                         </div>
                     </div>
-                    <!--Button to Award Monthly Token-->
-                    <div class="row">
-                        <p>This operation is performed to increase ALL plectrum balances by 1.</p>
-                        <a href="{% url 'award_plectrums' %}" class="btn btn-sm btn-outline-success">Award Plectrums</a>
-                        <p class="text-muted">Note: this is for project purposes only, a deloped version would need to incorporate logic to limit increase once per month linked to the accounts start date</p>
+
+                     <!--Admin Tasks-->
+                     <div class="row">
+                        <div class="col-12">
+                            <h4 class="gold-txt text-start ps-4">Admin Tasks</h4>
+
+                            <!--Create Account -->
+                            <div class="row pt-2">
+                                <div class="col-8">
+                                    <p class="text-start ps-4"><span class="gold-txt ps-2">Create Account:</span> Upon creation of a new order, please create a new account</p>
+                                </div>
+                                <div class="col-4">
+                                    <a href="{% url 'new_account' %}" class="btn btn-sm btn-outline-success">Create New Account</a>
+                                </div>
+                            </div>
+                            
+                            <hr class="mb-2">
+
+                            <!--Button to Award Monthly Token-->
+                            <div class="row pt-2">
+                                <div class="col-8">
+                                    <p class="text-start ps-4"><span class="gold-txt ps-2">Award Plectrums:</span> This operation is performed to increase plectrum balances by 1 for <u>ALL ACTIVE</u> accounts.</p>
+                                </div>
+                                <div class="col-4">
+                                    <a href="{% url 'award_plectrums' %}" class="btn btn-sm btn-outline-success">Award Plectrums</a>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <p class="text-muted px-4">Note: this action is for project purposes only, a live deployed version would need to incorporate logic to limit increase once per month diarised to synch with the account start date.</p>
+                                </div>
+                            </div>
+                            <hr class="mb-2">
+                        
+                        </div>
+
                     </div>
                 </div>
             </div>
