Rename of some site_adming functions to snake case, account.html some fields noew directed to order model source

--- a/site_admin/templates/site_admin/list_orders.html
+++ b/site_admin/templates/site_admin/list_orders.html
@@ -53,6 +53,8 @@
                                         <a href="{% url 'delete_order' order.id %}" class="btn btn-sm btn-outline-danger">Delete</a>
                                     </td>
                                 </tr>
+                                {% empty %}
+                                <h4 class="text-danger text center"> There are no orders!</h4>
                                 {% endfor %}
                             </table>
                         
