--- a/site_admin/templates/site_admin/site_admin.html
+++ b/site_admin/templates/site_admin/site_admin.html
@@ -46,7 +46,7 @@
                             <p class="text-danger text-end mb-4">Caution: Orders created directly by-pass payment processes!</p>
                         </div>
                         <div class="row d-flex justify-content-evenly">
-                            <a href="{% url 'accounts' %}" class="btn btn-md btn-gold-outline mb-4">Manage Accounts</a>
+                            <a href="{% url 'list_accounts' %}" class="btn btn-md btn-gold-outline mb-4">Manage Accounts</a>
                             <a href="" class="btn btn-md btn-gold-outline mb-4">Manage Guitar Loans </a>
                         </div>
                     </div>
