--- a/site_admin/templates/site_admin/accounts.html
+++ b/site_admin/templates/site_admin/accounts.html
@@ -32,6 +32,7 @@
                             <table class="text-center mx-auto table table-dark table-striped">
                                 <tr class="table-underline">
                                     <th class="">Member</th>
+                                    <th class="">Order No.</th>
                                     <th class="">Tier</th>
                                     <th class="">Date Joined</th>
                                     <th class="">Plan Status</th>
@@ -44,6 +45,7 @@
                                 </tr>
                                 <tr class="pt-5">
                                     <td>{{ account.order.member_profile }}</td>
+                                    <td>{{ account.order.order_number|truncatechars:6 }}</a></td>
                                     <td>{{ account.order.subscription_plan }}</td>
                                     <td>{{ account.order.date }}</td>
                                     <td>{{ account.active|yesno:"Active,Cancelled" }}</td>
@@ -54,7 +56,7 @@
                                     </td>
                                 </tr>
                                 {% empty %}
-                                <p> There are no accounts!
+                                <h4 class="text-danger text center"> There are no accounts!</h4>
                                 {% endfor %}
                             </table>
                         </div>
@@ -68,7 +70,7 @@
                             <!--Button to Award Monthly Token-->
                             <div class="row pt-2">
                                 <div class="col-8">
-                                    <p class="text-start ps-4"><span class="gold-txt ps-2">Award Plectrums:</span> This operation is performed to increase plectrum balances by 1 for <u>ALL ACTIVE</u> accounts.</p>
+                                    <p class="text-start ps-4"><span class="gold-txt">Award Plectrums:</span> This operation is performed to increase plectrum balances by 1 for <u>ALL ACTIVE</u> accounts.</p>
                                 </div>
                                 <div class="col-4">
                                     <a href="{% url 'award_plectrums' %}" class="btn btn-sm btn-outline-success">Award Plectrums</a>
