Nav (base.html and mobile) swap temporary icon with new guitar pick svg

--- a/templates/includes/mobile-nav-items.html
+++ b/templates/includes/mobile-nav-items.html
@@ -61,8 +61,7 @@
             <li class="list-inline-item">
               <a class="ivory-txt gold-accent-txt" href="">
                 <div class="text-center">
-                  <!--Temporary icon - to be replaced with SVG matching membership tier + counter for picks available-->
-                  <i class="fas fa-map-marker fa-2x"></i>
+                  <img src="{{ MEDIA_URL }}guitarpick.svg" class="guitar-svg add-gold">
                 </div>
                 <p class="my-0 text-center">
                   {% if picks_total %}
