--- a/templates/base.html
+++ b/templates/base.html
@@ -131,14 +131,12 @@
                     </li>
 
                     {% if request.user.is_authenticated %}
-                    <!--Outstanding : Functionality relating to 'picks to spend' has not been completed  - please refer to README -->
                       
                     <!--Picks to Spend (logged in users)-->
                       <li class="list-inline-item text-center">
                         <a class="ivory-txt gold-accent-txt" href="">
                           <div class="text-center">
-                            <!--Temporary icon - to be replaced with SVG matching membership tier + counter for picks available-->
-                            <i class="fas fa-map-marker fa-2x"></i>
+                            <img src="{{ MEDIA_URL }}guitarpick.svg" class="guitar-svg add-gold">
                           </div>
                           <p class="my-0 text-center">
                             {% if picks_total %}
